code/dotnet/Publisher/v1/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# Publisher client library for .NET

[![API Version](https://img.shields.io/badge/api-v2-blue)]()
[![Nuget](https://img.shields.io/badge/nuget-v0.8.13-orange)](https://www.nuget.org/packages/FactSet.SDK.Publisher/0.8.13)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)

Allow clients to fetch Publisher Analytics through APIs.

This .NET package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 2
- SDK version: 0.8.13
- Build package: com.factset.sdk.codegen.FactSetCSharpNetCoreClientCodegen

For more information, please visit [https://developer.factset.com/contact](https://developer.factset.com/contact)

## Requirements

* .NET Standard >= 2.0

## Installation

### .NET CLI

```bash
dotnet add package FactSet.SDK.Utils
dotnet add package FactSet.SDK.Publisher -v 0.8.13
```

### NuGet

```bash
nuget install FactSet.SDK.Utils
nuget install FactSet.SDK.Publisher -Version 0.8.13
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup [.NET Standard 2.0](https://docs.microsoft.com/en-us/dotnet/standard/net-standard?tabs=net-standard-2-0) compatible environment.
3. [Install dependencies](#installation).
4. Run the following:

> [!IMPORTANT]
> The parameter variables defined below are just examples and may potentially contain non valid values. Please replace them with valid values.

### Example Code

```csharp
using System;
using System.Threading.Tasks;
using FactSet.SDK.Utils.Authentication;
using FactSet.SDK.Publisher.Api;
using FactSet.SDK.Publisher.Client;
using FactSet.SDK.Publisher.Model;

namespace Example
{
    public static class GetAccountsExample
    {
        public static async Task Main()
        {
            var config = new FactSet.SDK.Publisher.Client.Configuration();

            // Examples for each supported authentication method are below,
            // choose one that satisfies your use case.

            /* (Preferred) OAuth 2.0: FactSetOAuth2 */
            // See https://github.com/FactSet/enterprise-sdk#oauth-20
            // for information on how to create the app-config.json file
            //
            // The confidential client instance should be reused in production environments.
            // See https://github.com/FactSet/enterprise-sdk-utils-dotnet#authentication
            // for more information on using the ConfidentialClient class
            ConfidentialClient confidentialClient = await ConfidentialClient.CreateAsync("/path/to/app-config.json");
            config.OAuth2Client = confidentialClient;

            /* Basic authentication: FactSetApiKey */
            // See https://github.com/FactSet/enterprise-sdk#api-key
            // for information how to create an API key
            // config.Username = "USERNAME-SERIAL";
            // config.Password = "API-KEY";

            var apiInstance = new AccountsApi(config);
            var path = "\"Client:Foo/Bar\"";  // string | The directory to get the accounts and sub-directories in (default to "Client:Foo/Bar")

            try
            {
                // Get accounts and sub-directories in a directory
                AccountDirectories result = apiInstance.GetAccounts(path);
                Console.WriteLine(result.ToJson());
            }
            catch (ApiException e)
            {
                Console.WriteLine("Exception when calling AccountsApi.GetAccounts: " + e.Message );
                Console.WriteLine("Status Code: "+ e.ErrorCode);
                Console.WriteLine(e.StackTrace);
            }
        }
    }
}
```

### Using a Proxy

To use the API client with a HTTP proxy, setup a `System.Net.WebProxy`

```csharp
Configuration c = new Configuration();
System.Net.WebProxy webProxy = new System.Net.WebProxy("http://myProxyUrl:80/");
webProxy.Credentials = System.Net.CredentialCache.DefaultCredentials;
c.Proxy = webProxy;
```

## Documentation for API Endpoints

All URIs are relative to *https://api-sandbox.factset.com*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*AccountsApi* | [**GetAccounts**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Publisher/v1/docs/AccountsApi.md#getaccounts) | **GET** /analytics/lookups/v2/accounts/{path} | Get accounts and sub-directories in a directory
*CalculationsApi* | [**CancelCalculationById**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Publisher/v1/docs/CalculationsApi.md#cancelcalculationbyid) | **DELETE** /analytics/engines/v2/calculations/{id} | Cancel calculation by id
*CalculationsApi* | [**GetCalculationStatusById**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Publisher/v1/docs/CalculationsApi.md#getcalculationstatusbyid) | **GET** /analytics/engines/v2/calculations/{id} | Get calculation status by id
*CalculationsApi* | [**GetCalculationStatusSummaries**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Publisher/v1/docs/CalculationsApi.md#getcalculationstatussummaries) | **GET** /analytics/engines/v2/calculations | Get all calculation statuses
*CalculationsApi* | [**RunCalculation**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Publisher/v1/docs/CalculationsApi.md#runcalculation) | **POST** /analytics/engines/v2/calculations | Run calculation
*DocumentsApi* | [**GetPubDocuments**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Publisher/v1/docs/DocumentsApi.md#getpubdocuments) | **GET** /analytics/lookups/v2/engines/pub/documents/{path} | Gets Publisher documents and sub-directories in a directory


## Documentation for Models

 - [Model.AccountDirectories](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Publisher/v1/docs/AccountDirectories.md)
 - [Model.Calculation](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Publisher/v1/docs/Calculation.md)
 - [Model.CalculationStatus](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Publisher/v1/docs/CalculationStatus.md)
 - [Model.CalculationStatusSummary](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Publisher/v1/docs/CalculationStatusSummary.md)
 - [Model.CalculationUnitStatus](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Publisher/v1/docs/CalculationUnitStatus.md)
 - [Model.DocumentDirectories](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Publisher/v1/docs/DocumentDirectories.md)
 - [Model.PACalculationColumn](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Publisher/v1/docs/PACalculationColumn.md)
 - [Model.PACalculationGroup](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Publisher/v1/docs/PACalculationGroup.md)
 - [Model.PACalculationParameters](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Publisher/v1/docs/PACalculationParameters.md)
 - [Model.PADateParameters](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Publisher/v1/docs/PADateParameters.md)
 - [Model.PAIdentifier](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Publisher/v1/docs/PAIdentifier.md)
 - [Model.PubCalculationParameters](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Publisher/v1/docs/PubCalculationParameters.md)
 - [Model.PubDateParameters](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Publisher/v1/docs/PubDateParameters.md)
 - [Model.PubIdentifier](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Publisher/v1/docs/PubIdentifier.md)
 - [Model.SPARCalculationParameters](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Publisher/v1/docs/SPARCalculationParameters.md)
 - [Model.SPARDateParameters](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Publisher/v1/docs/SPARDateParameters.md)
 - [Model.SPARIdentifier](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Publisher/v1/docs/SPARIdentifier.md)
 - [Model.VaultCalculationParameters](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Publisher/v1/docs/VaultCalculationParameters.md)
 - [Model.VaultDateParameters](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Publisher/v1/docs/VaultDateParameters.md)
 - [Model.VaultIdentifier](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/Publisher/v1/docs/VaultIdentifier.md)


## Documentation for Authorization


### FactSetApiKey

- **Type**: HTTP basic authentication


### FactSetOAuth2

- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


## Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

## Copyright

Copyright 2025 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
